--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,6 +1,4 @@
 ^Data\.2DII\.Rproj$
 ^\.Rproj\.user$
 ^data-raw$
-^Excel, documentation and research papers$
-^Research papers$
-^Metadata$
+^.*\.pdf
